# VLM.TurbulentSequencer

./: .gitignore  ComplexFloatFFT.java  ComplexFloatFFT_Mixed.java  Factorize.java  LICENSE  Readme.md  asinT.ts  calcprobs.java  calcprobs.js  calcprobs.ts  curve.java  curve.ts  debounce.ts  drawCircle.ts  drawDynGraph.ts  fft.ts  fftfilter.java  fftfilter.js  fftfilter.ts  findTiesAndAccents.java  findTiesAndAccents.ts  findnote.js  findnote.ts  findnotes.java  findnotes.ts  javabuild.cmd  jsCommon.ts  monoNote.java  monoNote.ts  normalize.java  normalize.ts  notesBg.ts  random.ts  randomCs.java  randomCs.js  randomCs.ts  rotary.java  rotate.java  rotate.ts  rotatePiano.java  (+6 more)
TurbulentSequencerC/: CMakeLists.txt  Readme.md  TurbulentSequencerC.sln  maxmspsdk.xcconfig
TurbulentSequencerC/.github/workflows/: main.yml
TurbulentSequencerC/TurbulentSequencerC.xcworkspace/: contents.xcworkspacedata
TurbulentSequencerC/TurbulentSequencerC/TurbulentSequencerC.xcodeproj/: project.pbxproj
TurbulentSequencerC/c74support/max-includes/: ext_mess.h  ext_path.h  max-common.xcconfig  max_extern_common.props  max_types.h
TurbulentSequencerC/projects/calcprobs/: calcprobs.c  calcprobs.vcxproj
TurbulentSequencerC/projects/curve/: curve.c  curve.vcxproj
TurbulentSequencerC/projects/fftfilter/: fftfilter.c  fftfilter.vcxproj  kiss_fft.c
TurbulentSequencerC/projects/findTiesAndAccents/: findTiesAndAccents.c  findTiesAndAccents.vcxproj
TurbulentSequencerC/projects/findnotes/: findnotes.c  findnotes.vcxproj
TurbulentSequencerC/projects/monoNote/: monoNote.c  monoNote.vcxproj
(+54 files in other folders)
